# mlxtend

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: linter.yml  publish.yaml  python-package-uv.yml
docs/sources/: CHANGELOG.md  CONTRIBUTING.md  index.md  installation.md
mlxtend/: __init__.py
mlxtend/classifier/tests/: test_ensemble_vote_classifier.py  test_stacking_classifier.py  test_stacking_cv_classifier.py
mlxtend/evaluate/: bias_variance_decomp.py
mlxtend/evaluate/tests/: test_bias_variance_decomp.py
mlxtend/feature_selection/: exhaustive_feature_selector.py
mlxtend/feature_selection/tests/: test_exhaustive_feature_selector.py
mlxtend/frequent_patterns/: apriori.py  association_rules.py  fpcommon.py  fpgrowth.py  fpmax.py  hmine.py
mlxtend/frequent_patterns/tests/: test_apriori.py  test_fpbase.py
mlxtend/frequent_patterns/tests/speedtests/: apriori.py
mlxtend/preprocessing/: scaling.py
mlxtend/preprocessing/tests/: test__scaling__minmax_scaling.py  test__scaling__standardizing.py
mlxtend/utils/: checking.py
mlxtend/utils/tests/: test_checking_inputs.py
temp/logs_72625752468/: 0_formatting.txt
temp/logs_72625752468/formatting/: 1_Set up job.txt  system.txt
temp/logs_72627800145/: 0_build-linux.txt
temp/logs_72627800145/build-linux/: 16_Post Run actions_checkout@v4.txt  17_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install uv.txt  5_Install dependencies.txt  6_Show dependency versions.txt  7_Run tests.txt  system.txt
