[build-system]
requires = [
  "setuptools >= 59.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "mlxtend"
authors = [
    {name = "Sebastian Raschka", email = "mail@sebastianraschka.com"}
]
description="Machine Learning Library Extensions"
dynamic = ["version"]
requires-python = ">=3.11"
license= {text = "BSD 3-Clause"}
readme = "README.md"
dependencies = [
    "scipy>=1.16.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "joblib>=1.5.2",
]
classifiers=[
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.optional-dependencies]
testing = ["coverage", "pytest"]
docs = ["mkdocs", "python-markdown-math", "mkdocs-bootswatch", "nbconvert", "markdown", "pyyaml"]

[dependency-groups]
dev = [
    "black",
    "build",
    "coverage",
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "twine",
]
docs = [
    "markdown",
    "mkdocs",
    "mkdocs-bootswatch",
    "nbconvert",
    "python-markdown-math",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/rasbt/mlxtend"
Documentation = "https://rasbt.github.io/mlxtend"
Repository = "https://github.com/rasbt/mlxtend"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = {attr = "mlxtend.__version__"}

[tool.setuptools.packages.find]
include = ["mlxtend", "mlxtend.*"]
namespaces = false

[tool.setuptools.package-data]
mlxtend = ["LICENSE-BSD3.txt", "LICENSE-CC-BY.txt", "README.md", "mlxtend/data/data/*"]

[tool.pytest.ini_options]
norecursedirs = [
    "plotting/*",
    "image/*",
    "build/",
]
